spacing fix

--- a/style.css
+++ b/style.css
@@ -7,7 +7,11 @@
 body {
   margin: 0;
   padding: 0;
-  background: #292a2b;
+  background: #fff;
+}
+
+#awcSectionBuilderCards {
+  padding: 65px 12px;
 }
 
 /* =================================================================== */
